--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "zod": "latest",
     "firebase": "latest"
   },
+  "engines": {
+  "node": "18.x"
+},
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
