--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "transaction-manager",
+  "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.8.0",
+    "@aws-sdk/client-rds-data": "latest",
+    "@cloudflare/workers-types": "latest",
+    "@electric-sql/pglite": "latest",
     "@hookform/resolvers": "latest",
+    "@libsql/client": "latest",
+    "@libsql/client-wasm": "latest",
+    "@neondatabase/serverless": "^1.0.0",
+    "@op-engineering/op-sqlite": "latest",
+    "@opentelemetry/api": "latest",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@planetscale/database": "latest",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-collapsible": "latest",
     "@radix-ui/react-context-menu": "^2.2.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -25,7 +39,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-radio-group": "latest",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -36,34 +50,63 @@
     "@radix-ui/react-toast": "latest",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-tooltip": "latest",
+    "@tidbcloud/serverless": "latest",
+    "@types/better-sqlite3": "latest",
+    "@types/pg": "latest",
+    "@types/sql.js": "latest",
+    "@vercel/postgres": "latest",
+    "@xata.io/client": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "latest",
+    "bun-types": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "drizzle-orm": "^0.41.0",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
+    "expo-sqlite": "latest",
+    "firebase": "^9.23.0",
+    "gel": "latest",
     "input-otp": "1.4.1",
+    "knex": "latest",
+    "kysely": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.1.0",
-    "next-themes": "^0.4.6",
+    "mysql2": "latest",
+    "next": "15.2.4",
+    "next-auth": "^5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
+    "postgres": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
+    "recharts": "latest",
+    "resend": "^4.2.0",
     "sonner": "^1.7.1",
+    "sql.js": "latest",
+    "sqlite3": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
+    "babel-loader": "^10.0.0",
+    "drizzle-kit": "^0.30.6",
+    "pg": "^8.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
